--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>Cancer Detection</title>
   </head>
-  <body>
+  <body class="bg">
     <div id="app">
       <h1>Cancer Detection</h1>
       <div style="padding-top: 16px">
@@ -72,6 +72,20 @@
     text-align: center;
     color: #2c3e50;
     margin-top: 5%;
+  }
+
+  .bg {
+    /* The image used */
+    background-image: url("./static/background.jpeg");
+
+    /* Full height */
+    height: 100%;
+    min-height: 680px;
+
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
   }
 
   .button {
